# FasterTransformer_GLM

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  README  README.md  build.sh  check_cuda.py  install.sh  setenv.sh  start.sh
examples/cpp/glm/: CMakeLists.txt  glm_config.ini  glm_example.cc  glm_example_utils.cc
examples/pytorch/glm/: benchmark-generation.sh  glm_example.py  glm_server.py  glm_server.sh  glm_server_test.py  input.txt
examples/pytorch/glm/icetk_glm_130B/: ice_tokenizer.py
examples/pytorch/glm/utils/: glm.py  glm_ckpt_convert.py  strategies.py  tools.py
src/fastertransformer/kernels/: activation_kernels.cu  activation_kernels.h  add_residual_kernels.cu  add_residual_kernels.h  decoder_masked_multihead_attention_utils.h  decoding_kernels.cu  decoding_kernels.h  gpt_kernels.cu  gpt_kernels.h  layernorm_kernels.cu  layernorm_kernels.h  matrix_vector_multiplication.cu  matrix_vector_multiplication.h  unfused_attention_kernels.cu  unfused_attention_kernels.h
src/fastertransformer/layers/: CMakeLists.txt  FfnLayer.cc  GluFfnLayer.cc  GluFfnLayer.h  GluFfnWeight.h  TensorParallelGeluGluFfnLayer.cc  TensorParallelGeluGluFfnLayer.h
src/fastertransformer/layers/attention_layers/: CMakeLists.txt  DecoderSelfAttentionLayer.cc  GlmContextAttentionLayer.cc  GlmContextAttentionLayer.h  GlmDecoderSelfAttentionLayer.cc  GlmDecoderSelfAttentionLayer.h  TensorParallelGlmContextAttentionLayer.cc  TensorParallelGlmContextAttentionLayer.h  TensorParallelGlmDecoderSelfAttentionLayer.cc  TensorParallelGlmDecoderSelfAttentionLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/glm/: CMakeLists.txt  Glm.cc  Glm.h  GlmContextDecoder.cc  GlmContextDecoder.h  GlmDecoder.cc  GlmDecoder.h  GlmDecoderLayerWeight.cc  GlmDecoderLayerWeight.h  GlmWeight.cc  GlmWeight.h
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/th_op/glm/: CMakeLists.txt  GlmOp.cc  GlmOp.h
